<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindCaller"
        circle:name="@string/call"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/call_icon" />

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindMessage"
        circle:name="@string/messages"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/message_icon" />

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindMusic"
        circle:name="@string/music"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/music_icon" />

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindVoiceRecorder"
        circle:name="@string/voiceRecorder"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/voice_recorder_icon" />

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindAlarm"
        circle:name="@string/alarm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/alarm_icon" />

    <com.askme.comfort.CircleImageView
        android:id="@+id/blindSettings"
        circle:name="@string/settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/settings_icon" />

</merge>